--- a/documentation/postgres/types/index.html
+++ b/documentation/postgres/types/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 2.7.0</a>
+		      <a href="/marten" class="navbar-brand">Marten 2.8.0</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -137,7 +137,7 @@ select * from serial_two;
 <pre><code>create sequence my_own_named_sequence
 </code></pre>
 <p>Look at the Postgres Sequence docs for more info.</p>
-<p>https://www.postgresql.org/docs/9.5/static/sql-createsequence.html</p>
+<p><a href="https://www.postgresql.org/docs/9.5/static/sql-createsequence.html">https://www.postgresql.org/docs/9.5/static/sql-createsequence.html</a></p>
 <h3 id="boolean">boolean</h3>
 <p>The boolean type is great to work with, you can use it in many ways. For example, assuming we had a user table with a boolean column <code>active</code></p>
 <p>We could use various different queries like so:</p>
