--- a/documentation/events/appending/index.html
+++ b/documentation/events/appending/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 2.7.0</a>
+		      <a href="/marten" class="navbar-brand">Marten 2.8.0</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -114,7 +114,7 @@ future version use that aggregate type to perform versioned snapshots of the ent
 you could just supply either a string to mark the &quot;stream type&quot; or work without a stream type.</p>
 <p>As usual, our sample problem domain is the Lord of the Rings style &quot;Quest.&quot; For now, you can either start a new stream and let Marten assign the Guid
 id for the stream:</p>
-<pre><code class="language-csharp">&#xA;var joined = new MembersJoined { Members = new[] { &quot;Rand&quot;, &quot;Matt&quot;, &quot;Perrin&quot;, &quot;Thom&quot; } };&#xA;var departed = new MembersDeparted { Members = new[] { &quot;Thom&quot; } };&#xA;&#xA;var id = session.Events.StartStream(joined, departed).Id;&#xA;session.SaveChanges();&#xA;</code></pre>
+<pre><code class="language-csharp">&#xA;var joined = new MembersJoined { Members = new[] { &quot;Rand&quot;, &quot;Matt&quot;, &quot;Perrin&quot;, &quot;Thom&quot; } };&#xA;var departed = new MembersDeparted { Members = new[] { &quot;Thom&quot; } };&#xA;&#xA;var id = session.Events.StartStream&lt;Quest&gt;(joined, departed).Id;&#xA;session.SaveChanges();&#xA;</code></pre>
 <p>Or have Marten use a Guid value that you provide yourself:</p>
 <pre><code class="language-csharp">&#xA;var joined = new MembersJoined { Members = new[] { &quot;Rand&quot;, &quot;Matt&quot;, &quot;Perrin&quot;, &quot;Thom&quot; } };&#xA;var departed = new MembersDeparted { Members = new[] { &quot;Thom&quot; } };&#xA;&#xA;var id = Guid.NewGuid();&#xA;session.Events.StartStream&lt;Quest&gt;(id, joined, departed);&#xA;session.SaveChanges();&#xA;</code></pre>
 <p>For stream identity (strings vs. Guids), see <a href="/marten/documentation/events/identity">Stream Identity</a>.</p>
@@ -128,7 +128,7 @@ event stream if and only if the maximum event id for the stream matches the expe
 and a <code>EventStreamUnexpectedMaxEventIdException</code> exception is thrown.</p>
 <pre><code class="language-csharp">&#xA;session.Events.StartStream&lt;Quest&gt;(id, started);&#xA;session.SaveChanges();&#xA;&#xA;var joined = new MembersJoined { Members = new[] { &quot;Rand&quot;, &quot;Matt&quot;, &quot;Perrin&quot;, &quot;Thom&quot; } };&#xA;var departed = new MembersDeparted { Members = new[] { &quot;Thom&quot; } };&#xA;&#xA;// Events are appended into the stream only if the maximum event id for the stream&#xA;// would be 3 after the append operation.&#xA;session.Events.Append(id, 3, joined, departed);&#xA;&#xA;session.SaveChanges();&#xA;</code></pre> 
 <h3 id="createstream-vs.append">CreateStream vs. Append</h3>
-<p>Both, <code>CreateStream</code> and <code>Append</code> can be used to start a new event stream. The difference with the methods is that <code>CreateStream</code> always checks for existing stream and throws <code>ExistingStreamIdCollisionException</code> in case stream already exists.</p>
+<p>Both, <code>StartStream</code> and <code>Append</code> can be used to start a new event stream. The difference with the methods is that <code>StartStream</code> always checks for existing stream and throws <code>ExistingStreamIdCollisionException</code> in case stream already exists.</p>
 
 			      	</div>
 
