--- a/getting_started/index.html
+++ b/getting_started/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 2.7.0</a>
+		      <a href="/marten" class="navbar-brand">Marten 2.8.0</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -100,9 +100,9 @@ PM> Install-Package Marten
 <pre>
 paket add nuget Marten
 </pre>
-<p>The next step is to get access to a Postgresql <strong>9.5+</strong> database schema. If you want to let Marten build database schema objects on the fly at development time,
+<p>The next step is to get access to a PostgreSQL <strong>9.5+</strong> database schema. If you want to let Marten build database schema objects on the fly at development time,
 make sure that your user account has rights to execute <code>CREATE TABLE/FUNCTION</code> statements.</p>
-<p>Marten uses the <a href="http://www.npgsql.org">Npgsql</a> library to access Postgresql from .Net, so you'll likely want to read their <a href="http://www.npgsql.org/doc/connection-string-parameters.html">documentation on connection string syntax</a>.</p>
+<p>Marten uses the <a href="http://www.npgsql.org">Npgsql</a> library to access PostgreSQL from .NET, so you'll likely want to read their <a href="http://www.npgsql.org/doc/connection-string-parameters.html">documentation on connection string syntax</a>.</p>
 <h2 id="bootstrapping-a-document-store">Bootstrapping a Document Store</h2>
 <p>To start up Marten in a running application, you need to create a single <code>IDocumentStore</code> object. The quickest way is to start with
 all the default behavior and a connection string:</p>
@@ -110,11 +110,11 @@ all the default behavior and a connection string:</p>
 <p>Now, for your first document type, let's represent the users in our system:</p>
 <pre><code class="language-csharp">&#xA;public class User&#xA;{&#xA;    public Guid Id { get; set; }&#xA;    public string FirstName { get; set; }&#xA;    public string LastName { get; set; }&#xA;    public bool Internal { get; set; }&#xA;    public string UserName { get; set; }&#xA;}&#xA;</code></pre>
 <p><em>For more information on document id's, see <a href="/marten/documentation/documents/identity">Document Identity</a>.</em></p>
-<p>And now that we've got a Postgresql schema and an <code>IDocumentStore</code>, let's start persisting and loading user documents:</p>
+<p>And now that we've got a PostgreSQL schema and an <code>IDocumentStore</code>, let's start persisting and loading user documents:</p>
 <pre><code class="language-csharp">&#xA;// Open a session for querying, loading, and &#xA;// updating documents &#xA;using (var session = store.LightweightSession())&#xA;{&#xA;    var user = new User {FirstName = &quot;Han&quot;, LastName = &quot;Solo&quot;};&#xA;    session.Store(user);&#xA;&#xA;    session.SaveChanges();&#xA;}&#xA;&#xA;// Open a session for querying, loading, and &#xA;// updating documents with a backing &quot;Identity Map&quot;&#xA;using (var session = store.OpenSession())&#xA;{&#xA;    var existing = session&#xA;        .Query&lt;User&gt;()&#xA;        .Where(x =&gt; x.FirstName == &quot;Han&quot; &amp;&amp; x.LastName == &quot;Solo&quot;)&#xA;        .Single();&#xA;}&#xA;&#xA;// Open a session for querying, loading, and &#xA;// updating documents that performas automated&#xA;// &quot;dirty&quot; checking of previously loaded documents&#xA;using (var session = store.DirtyTrackedSession())&#xA;{&#xA;    &#xA;}&#xA;</code></pre>
 <h2 id="integrating-marten-with-ioc-containers">Integrating Marten with IoC Containers</h2>
 <p>The Marten team has striven to make the library perfectly usable without the usage of an IoC container, but you may still want to
-use an IoC container specifically to manage dependencies and the lifecyle of Marten objects.</p>
+use an IoC container specifically to manage dependencies and the life cycle of Marten objects.</p>
 <p>Using <a href="http://structuremap.github.io">StructureMap</a> as the example container, we recommend registering Marten something like this:</p>
 <pre><code class="language-csharp">&#xA;public class MartenServices : Registry&#xA;{&#xA;    public MartenServices()&#xA;    {&#xA;        ForSingletonOf&lt;IDocumentStore&gt;().Use(&quot;Build the DocumentStore&quot;, () =&gt;&#xA;        {&#xA;            return DocumentStore.For(_ =&gt;&#xA;            {&#xA;                _.Connection(&quot;your connection string&quot;);&#xA;                _.AutoCreateSchemaObjects = AutoCreate.None;&#xA;                &#xA;                // other Marten configuration options&#xA;            });&#xA;        });&#xA;&#xA;        For&lt;IDocumentSession&gt;()&#xA;            .LifecycleIs&lt;ContainerLifecycle&gt;() // not really necessary in some frameworks&#xA;            .Use(&quot;Lightweight Session&quot;, c =&gt; c.GetInstance&lt;IDocumentStore&gt;().LightweightSession());&#xA;    }&#xA;}&#xA;</code></pre>
 <p>There are really only two key points here:</p>
