--- a/documentation/splash.htm
+++ b/documentation/splash.htm
@@ -22,8 +22,8 @@
 
 
     <!-- Custom Fonts -->
-    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" >
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" >
 
 </head>
 
@@ -65,7 +65,7 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-			<img src="http://jasperfx.github.io/marten/content/images/banner.png" width="80%" align="middle"/>
+			<img src="https://jasperfx.github.io/marten/content/images/banner.png" width="80%" align="middle"/>
             <h1 style="color:white">Marten</h1>
             <h3>PostgreSQL as Document Db &amp; Event Store for .NET Development</h3>
 
@@ -103,7 +103,7 @@
         <div class="col-md-1"></div>
         <div class="col-md-4">
           <h2>Document Database</h2>
-          <p>The Marten library provides .NET developers with the ability to easily use the proven <a href="http://www.postgresql.org">PostgreSQL database engine</a>
+          <p>The Marten library provides .NET developers with the ability to easily use the proven <a href="https://www.postgresql.org">PostgreSQL database engine</a>
 and its <a href="https://www.compose.io/articles/is-postgresql-your-next-json-database/">fantastic JSON support</a> as a fully fledged <a href="https://en.wikipedia.org/wiki/Document-oriented_database">document database</a>. The Marten team believes that a document database has far reaching benefits for developer productivity
 over relational databases with or without an ORM tool.
           </p>
@@ -126,8 +126,8 @@ over relational databases with or without an ORM tool.
 
 
 
-        <script type='text/javascript' src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script type='text/javascript' src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+        <script type='text/javascript' src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        <script type='text/javascript' src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 <script>
 $('#search').keyup(function(e){
   if(e.keyCode == 13) {
