Update nuget badge to use badgen.net which is faster to load than shields.io [skip ci]

--- a/documentation/splash.htm
+++ b/documentation/splash.htm
@@ -72,7 +72,7 @@
                     <h2>Polyglot Persistence for .NET Systems using the Rock Solid PostgreSQL Database</h2>
                     <p class="lead">
                         <a href="https://ci.appveyor.com/project/jasper-ci/marten/history"><img src="https://img.shields.io/appveyor/ci/jasper-ci/marten.svg"></img></a>
-                        <a href="https://www.nuget.org/packages/Marten/"><img src="https://img.shields.io/nuget/v/Marten.svg"></img></a>
+                        <a href="https://www.nuget.org/packages/Marten/"><img src="https://badgen.net/nuget/v/marten"></img></a>
 
 
 <a href="https://gitter.im/jasperfx/marten?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://camo.githubusercontent.com/da2edb525cde1455a622c58c0effc3a90b9a181c/68747470733a2f2f6261646765732e6769747465722e696d2f4a6f696e253230436861742e737667" alt="Join the chat at https://gitter.im/jasperfx/marten" data-canonical-src="https://badges.gitter.im/Join%20Chat.svg" style="max-width:100%;"></a>
