Update appveyor badge to use appveyor url rather than shields.io [skip ci]

--- a/documentation/splash.htm
+++ b/documentation/splash.htm
@@ -71,7 +71,7 @@
 
                     <h2>Polyglot Persistence for .NET Systems using the Rock Solid PostgreSQL Database</h2>
                     <p class="lead">
-                        <a href="https://ci.appveyor.com/project/jasper-ci/marten/history"><img src="https://img.shields.io/appveyor/ci/jasper-ci/marten.svg"></img></a>
+                        <a href="https://ci.appveyor.com/project/jasper-ci/marten/history"><img src="https://ci.appveyor.com/api/projects/status/github/jasperfx/marten?svg=true"></img></a>
                         <a href="https://www.nuget.org/packages/Marten/"><img src="https://badgen.net/nuget/v/marten"></img></a>
 
 
